Commiting new pom's file (adding new testing profile).