@@ -168,84 +168,6 @@
 				<packaging.type>jar</packaging.type>
 			</properties>
 		</profile>
-	
-		<profile>
-			<id>embedded</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>integration-test</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>test</goal>
-								</goals>
-
-								<configuration>
-									<additionalClasspathElements>
-										<additionalClasspathElement>${JBOSS_HOME}/client/jbossws-native-client.jar</additionalClasspathElement>
-										<!-- Because jbossweb.sar contains shared web.xml, which must be 
-											visible from same CL as TomcatDeployer.class.getClassLoader -->
-										<additionalClasspathElement>${JBOSS_HOME}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
-									</additionalClasspathElements>
-
-									<redirectTestOutputToFile>true</redirectTestOutputToFile>
-									<trimStackTrace>false</trimStackTrace>
-									<printSummary>true</printSummary>
-									<includes>
-										<include>**/*Test.java</include>
-									</includes>
-									<forkMode>always</forkMode>
-
-									<!-- MaxPermSize Required to bump the space for relective data like 
-										classes, methods, etc. EMB-41. Endorsed required for things like WS support 
-										(EMB-61) -->
-									<argLine>-Xmx512m -XX:MaxPermSize=256m
-										-Djava.net.preferIPv4Stack=true
-										-Djava.util.logging.manager=org.jboss.logmanager.LogManager
-										-Djava.endorsed.dirs=${JBOSS_HOME}/lib/endorsed
-										-Djboss.home=${JBOSS_HOME}
-										-Djboss.boot.server.log.dir=${JBOSS_HOME}</argLine>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<!-- Get AS and put into "target" -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>unpack</id>
-								<phase>pre-integration-test</phase> <!-- So run before testing -->
-								<goals>
-									<goal>unpack</goal>
-								</goals>
-								<configuration>
-									<artifactItems>
-										<artifactItem>
-											<groupId>org.jboss.jbossas</groupId>
-											<artifactId>jboss-as-distribution</artifactId>
-											<version>${version.org.jboss.jbossas}</version>
-											<type>zip</type>
-											<overWrite>false</overWrite>
-											<outputDirectory>${project.build.directory}</outputDirectory>
-										</artifactItem>
-									</artifactItems>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
 
 
